# multimedia_media_library

./: .gitignore  0921.patch  1.diff  10195.diff  1021.patch  10950.diff  111.diff  1114.diff  2.dff  9243.diff  9434.diff  BUILD.gn  CONTEXT.MD  CONTEXT.md  OAT.xml  README.en.md  README.md  README_zh.md  bundle.json  diff.diff  hisysevent.yaml  media_library.gni  multi1.txt  multi2.txt  multimedia_aafwk.gni  ohos.build  patch.patch  patch_info0628.diff  publicity.xml  string.py  temp.txt  test_paths.txt
MediaLibraryExt/: BUILD.gn  package-lock.json  package.json
MediaLibraryExt/AppScope/: app.json
MediaLibraryExt/signature/: medialib.p7b
common/: BUILD.gn
common/media_cloud_sync_data/: BUILD.gn
common/media_cloud_sync_data/include/: cloud_media_sync_const.h
common/media_ipc_common/: BUILD.gn
common/utils/include/: madvise_utils.h  media_map_const_utils.h  media_path_utils.h  media_pure_file_utils.h  media_string_utils.h  media_time_utils.h  media_uri_utils.h  media_values_bucket_utils.h
common/utils/src/: madvise_utils.cpp  media_map_const_utils.cpp  media_path_utils.cpp  media_pure_file_utils.cpp  media_string_utils.cpp  media_time_utils.cpp  media_uri_utils.cpp
frameworks/ani/: BUILD.gn  arktsconfig.json  media_library_ani.versionscript
frameworks/ani/ets/: @ohos.file.photoAccessHelper.d.ets  @ohos.file.photoAccessHelper.ets  @ohos.filemanagement.userFileManager.ets  data_share_predicates.ets  fetch_result.ets  mediaAssetsChangeRequest.ets  media_album_change_request.ets  media_asset_change_request.ets  media_library_common.ets  media_library_enum.ets  moving_photo.ets  photo_access_helper.ets  photo_album.ets  photo_asset.ets
frameworks/ani/tests/: test.ets
frameworks/client/: BUILD.gn
frameworks/client/include/: media_client_utils.h  media_common_client.h  media_datashare_client.h  media_datashare_helper.h
frameworks/client/src/: media_client_utils.cpp  media_common_client.cpp  media_datashare_client.cpp  media_datashare_helper.cpp
frameworks/innerkitsimpl/analysis_data_kits/: BUILD.gn  analysis_data_manager.cpp
frameworks/innerkitsimpl/media_library/: BUILD.gn
frameworks/innerkitsimpl/media_library_camera_helper/: BUILD.gn
frameworks/innerkitsimpl/media_library_cloud_sync/: BUILD.gn
frameworks/innerkitsimpl/media_library_handler/: BUILD.gn  media_library_handler.cpp
frameworks/innerkitsimpl/media_library_helper/: BUILD.gn
frameworks/innerkitsimpl/media_library_manager/: BUILD.gn  media_library_custom_restore.cpp  media_library_extend_manager.cpp  media_library_manager.cpp
frameworks/innerkitsimpl/media_library_receiver/: BUILD.gn
frameworks/innerkitsimpl/media_permission_helper/: BUILD.gn
frameworks/innerkitsimpl/medialibrary_data_ability/: BUILD.gn  config.json
frameworks/innerkitsimpl/medialibrary_data_extension/: BUILD.gn  extension_blocklist.txt
frameworks/innerkitsimpl/medialibrary_proxy/: BUILD.gn
frameworks/innerkitsimpl/medialibrary_service/: BUILD.gn
frameworks/innerkitsimpl/test/: BUILD.gn
frameworks/kitsimpl/media_service_extension/: BUILD.gn
frameworks/native/c_api/: BUILD.gn  media_asset_change_request_impl.cpp  media_asset_helper.cpp  media_asset_helper_impl.cpp  media_asset_impl.cpp  media_userfile_client.cpp  moving_photo_impl.cpp  userfile_client.cpp
frameworks/native/media_library_asset_manager/: BUILD.gn
frameworks/utils/: BUILD.gn
frameworks/utils/configs/: heif_transcoding_checklist.json  userfilemanager_mimetypes.json  version.txt
frameworks/utils/include/: analysis_album_attribute_const.h  analysis_album_attribute_request_utils.h  analysis_album_attribute_spec.h  analysis_album_attribute_utils.h  analysis_album_attribute_validator.h  analysis_album_operation_data_utils.h  common_event_utils.h  cover_position_parser.h  cpu_utils.h  duration_parser.h  epfs.h  js_interface_helper.h  map_code_upload_checker.h  media_change_request_utils.h  media_duplicate_checker_utils.h  media_exif.h  media_itypes_utils.h  media_privacy_manager.h  medialibrary_client_errno.h  medialibrary_common_log.h  medialibrary_common_utils.h  medialibrary_errno.h  medialibrary_tracer.h  moving_photo_utils.h  parameter_utils.h  parser_task_queue_base.h  permission_utils.h  permission_whitelist_utils.h  post_event_utils.h  settings_data_manager.h  userfile_manager_types.h  userfile_manager_types.h.bak  userfilemgr_uri.h  userfilemgr_uri.h.bak
frameworks/utils/src/: common_event_utils.cpp  cover_position_parser.cpp  cpu_utils.cpp  duration_parser.cpp  js_interface_helper.cpp  map_code_upload_checker.cpp  media_change_request_utils.cpp  media_duplicate_checker_utils.cpp  media_itypes_utils.cpp  media_privacy_manager.cpp  medialibrary_common_utils.cpp  moving_photo_utils.cpp  parameter_utils.cpp  parser_task_queue_base.cpp  permission_utils.cpp  permission_whitelist_utils.cpp  post_event_utils.cpp  settings_data_manager.cpp
services/: BUILD.gn
services/background_task_manager/include/: background_cloud_batch_selected_file_download_callback.h  background_cloud_batch_selected_file_processor.h  background_cloud_file_processor.h  clone_status_listener.h  default_net_connect_observer.h  medialibrary_subscriber.h  moving_photo_processor.h
services/background_task_manager/src/: background_cloud_batch_selected_file_download_callback.cpp  background_cloud_batch_selected_file_processor.cpp  background_cloud_file_download_callback.cpp  background_cloud_file_processor.cpp  clone_status_listener.cpp  default_net_connect_observer.cpp  medialibrary_backgroud_task_continue_clone.cpp  medialibrary_subscriber.cpp  moving_photo_processor.cpp
services/include/: media_lib_service_stub.h
services/media_albums_manager/include/: media_albums_rdb_operations.h  (+1 more)
services/media_backup_extension/: BUILD.gn  libmediabackup.map
services/media_bgtask_mgr/: BUILD.gn  bundle.json  hisysevent.yaml  libmedia_bgtask_mgr_client.versionscript
services/media_library_service/: BUILD.gn
services/media_mtp/: BUILD.gn
services/media_service_extension/: BUILD.gn
tools/medialibrary_scanner/: BUILD.gn
tools/medialibrary_tool/: BUILD.gn
(+5545 files in other folders)
