# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

MEDIA_LIB_BASE_DIR = "//foundation/multimedia/media_library"
MEDIA_LIB_INNERKITS_DIR = "${MEDIA_LIB_BASE_DIR}/frameworks/innerkitsimpl"
MEDIA_LIB_INTERFACES_INNER_DIR = "${MEDIA_LIB_BASE_DIR}/interfaces/inner_api"
MEDIA_LIB_SERVICES_DIR = "${MEDIA_LIB_BASE_DIR}/frameworks/services"
MEDIA_LIB_COMMON_UTILS_DIR = "${MEDIA_LIB_BASE_DIR}/frameworks/utils"
MEDIA_FILEEXT_SOURCE_DIR =
    "${MEDIA_LIB_BASE_DIR}/frameworks/services/media_file_extension"
MEDIA_SCANNER_SOURCE_DIR =
    "${MEDIA_LIB_BASE_DIR}/frameworks/services/media_scanner"
MEDIA_LIB_INTERFACES_DIR = "${MEDIA_LIB_BASE_DIR}/interfaces"

ABILITY_RUNTIME_PATH = "//foundation/ability/ability_runtime"
ABILITY_RUNTIME_KITS_PATH = "${ABILITY_RUNTIME_PATH}/frameworks/kits"
ABILITY_RUNTIME_INNER_API_PATH = "${ABILITY_RUNTIME_PATH}/interfaces/inner_api"
ABILITY_RUNTIME_SERVICES_PATH = "${ABILITY_RUNTIME_PATH}/services"
