# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

MEDIALIB_ROOT_PATH = "//foundation/multimedia/media_library"

MEDIALIB_INNERKITS_PATH = "${MEDIALIB_ROOT_PATH}/frameworks/innerkitsimpl"
MEDIALIB_INTERFACES_PATH = "${MEDIALIB_ROOT_PATH}/interfaces"
MEDIALIB_JS_PATH = "${MEDIALIB_ROOT_PATH}/frameworks/js"
MEDIALIB_NATIVE_PATH = "${MEDIALIB_ROOT_PATH}/frameworks/native"
MEDIALIB_UTILS_PATH = "${MEDIALIB_ROOT_PATH}/frameworks/utils"

MEDIALIB_SERVICES_PATH = "${MEDIALIB_ROOT_PATH}/frameworks/services"
MEDIALIB_CLOUD_SYNC_PATH = "${MEDIALIB_SERVICES_PATH}/media_cloud_sync"
MEDIALIB_MTP_PATH = "${MEDIALIB_SERVICES_PATH}/media_mtp"
MEDIALIB_CAMERA_FRAMEWORK_PATH = "${MEDIALIB_ROOT_PATH}/../camera_framework"
MEDIALIB_GLOBAL_PATH = "//base/global"
MEDIALIB_THIRD_PARTY_PATH = "//third_party"
declare_args() {
  link_opt = false
}
