# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/config/components/ets_frontend/ets2abc_config.gni")
import("//build/ohos.gni")
import("//foundation/multimedia/media_library/media_library.gni")

config("ani_config") {
  include_dirs = []
}

group("media_library_ani") {
  deps = [
    ":photo_access_helper_ani",
    ":photo_access_helper_etc",
  ]
}

ohos_shared_library("photo_access_helper_ani") {
  public_configs = [ ":ani_config" ]
  include_dirs = [
    "src/include",
    "${MEDIALIB_INNERKITS_PATH}/media_library_helper/include",
    "${MEDIALIB_INTERFACES_PATH}/kits/c",
    "${MEDIALIB_SERVICES_PATH}/media_thumbnail/include",
    "${MEDIALIB_UTILS_PATH}/include",
    "${MEDIALIB_NATIVE_PATH}/c_api/common",
  ]

  sources = [
    "src/cpp/ani_error.cpp",
    "src/cpp/ani_module_photoaccess_helper.cpp",
    "src/cpp/cloud_enhancement_ani.cpp",
    "src/cpp/fetch_result_ani.cpp",
    "src/cpp/file_asset_ani.cpp",
    "src/cpp/media_album_change_request_ani.cpp",
    "src/cpp/media_ani_native_impl.cpp",
    "src/cpp/media_asset_change_request_ani.cpp",
    "src/cpp/media_assets_change_request_ani.cpp",
    "src/cpp/media_change_request_ani.cpp",
    "src/cpp/media_library_enum_ani.cpp",
    "src/cpp/medialibrary_ani_utils.cpp",
    "src/cpp/moving_photo_ani.cpp",
    "src/cpp/photo_access_helper_ani.cpp",
    "src/cpp/photo_album_ani.cpp",
    "src/cpp/photo_proxy_ani.cpp",
    "src/cpp/thumbnail_manager_ani.cpp",
    "src/cpp/userfile_client.cpp",
  ]

  deps = [
    "${MEDIALIB_INNERKITS_PATH}/media_library_helper:media_library",
    "${MEDIALIB_INTERFACES_PATH}/kits/js:medialibrary_nutils",
  ]

  external_deps = [
    "ability_runtime:ability_runtime",
    "ability_runtime:abilitykit_native",
    "ability_runtime:napi_base_context",
    "access_token:libaccesstoken_sdk",
    "access_token:libprivacy_sdk",
    "access_token:libtokenid_sdk",
    "app_file_service:fileuri_native",
    "bundle_framework:appexecfwk_core",
    "c_utils:utils",
    "data_share:datashare_common",
    "data_share:datashare_consumer",
    "hilog:libhilog",
    "hitrace:hitrace_meter",
    "i18n:intl_util",
    "image_framework:image_native",
    "image_framework:ohimage",
    "ipc:ipc_core",
    "napi:ace_napi",
    "player_framework:media_client",
    "relational_store:native_rdb",
    "relational_store:rdb_data_share_adapter",
    "resource_management:librawfile",
    "runtime_core:ani",
    "runtime_core:libarkruntime",
    "samgr:samgr_proxy",
  ]

  if (!media_library_link_opt) {
    sanitize = {
      cfi = true
      cfi_cross_dso = true
      debug = false
      integer_overflow = true
      ubsan = true
      boundary_sanitize = true
      stack_protector_ret = true
    }
  }

  subsystem_name = "multimedia"
  part_name = "media_library"
  output_extension = "so"
}

generate_static_abc("photo_access_helper") {
  base_url = "./ets"
  files = [ "./ets/@ohos.file.photoAccessHelper.ets" ]
  is_boot_abc = "True"
  device_dst_file = "/system/framework/photo_access_helper.abc"
}

ohos_prebuilt_etc("photo_access_helper_etc") {
  source = "$target_out_dir/photo_access_helper.abc"
  module_install_dir = "framework"
  subsystem_name = "multimedia"
  part_name = "media_library"
  deps = [ ":photo_access_helper" ]
}
