# Copyright (C) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/config/components/ets_frontend/ets2abc_config.gni")
import("//build/ohos.gni")
import("//foundation/multimedia/media_library/media_library.gni")

group("media_library_ani") {
  deps = [
    ":medialibrary_ani_utils",
    ":photo_access_helper_ani",
    ":photo_access_helper_etc",
    ":userfile_manager_ani",
    ":userfile_manager_etc",
  ]
}

config("taihe_config") {
  include_dirs = [ "src/include" ]
}

config("ani_config") {
  include_dirs = [
    "src/include",
    "${MEDIALIB_INNERKITS_PATH}/media_library_helper/include",
    "${MEDIALIB_INNERKITS_PATH}/medialibrary_data_extension/include",
    "${MEDIALIB_SERVICES_PATH}/media_async_worker/include",
    "${MEDIALIB_SERVICES_PATH}/media_thumbnail/include",
    "${MEDIALIB_UTILS_PATH}/include",
    "${MEDIALIB_BUSINESS_PATH}/media_assets_manager/include/vo",
    "${MEDIALIB_INNERKITS_PATH}/medialibrary_data_extension/include/ipc",
    "${MEDIALIB_INNERKITS_PATH}/medialibrary_data_extension/include/ipc/util",
    "${MEDIALIB_INNERKITS_PATH}/medialibrary_data_extension/include/ipc/vo",
    "${MEDIALIB_BUSINESS_PATH}/media_assets_manager/include/vo",
    "${MEDIALIB_BUSINESS_PATH}/media_albums_manager/include/vo",
  ]
}

ohos_shared_library("medialibrary_ani_utils") {
  configs = [ ":ani_config" ]

  sources = [
    "${MEDIALIB_INNERKITS_PATH}/medialibrary_data_extension/src/ipc/util/user_define_ipc_client.cpp",
    "${MEDIALIB_UTILS_PATH}/src/media_itypes_utils.cpp",
    "src/cpp/ani_error.cpp",
    "src/cpp/cloud_enhancement_ani.cpp",
    "src/cpp/cloud_enhancement_task_state_ani.cpp",
    "src/cpp/cloud_media_asset_manager_ani.cpp",
    "src/cpp/cloud_media_asset_status_ani.cpp",
    "src/cpp/delete_callback.cpp",
    "src/cpp/fetch_result_ani.cpp",
    "src/cpp/file_asset_ani.cpp",
    "src/cpp/file_asset_info_ani.cpp",
    "src/cpp/highlight_album_ani.cpp",
    "src/cpp/media_album_change_request_ani.cpp",
    "src/cpp/media_ani_native_impl.cpp",
    "src/cpp/media_asset_change_request_ani.cpp",
    "src/cpp/media_asset_data_handler_ani.cpp",
    "src/cpp/media_asset_edit_data_ani.cpp",
    "src/cpp/media_asset_manager_ani.cpp",
    "src/cpp/media_assets_change_request_ani.cpp",
    "src/cpp/media_call_transcode.cpp",
    "src/cpp/media_change_request_ani.cpp",
    "src/cpp/media_library_ani.cpp",
    "src/cpp/media_library_comm_ani.cpp",
    "src/cpp/media_library_enum_ani.cpp",
    "src/cpp/medialibrary_ani_utils.cpp",
    "src/cpp/moving_photo_ani.cpp",
    "src/cpp/moving_photo_call_transcoder.cpp",
    "src/cpp/photo_album_ani.cpp",
    "src/cpp/photo_proxy_ani.cpp",
    "src/cpp/picture_handle_client.cpp",
    "src/cpp/thumbnail_manager_ani.cpp",
    "src/cpp/userfile_client.cpp",
  ]

  media_asset_service_vo_source = [
    "${MEDIALIB_BUSINESS_PATH}/media_assets_manager/src/vo/commit_edited_asset_vo.cpp",
    "${MEDIALIB_BUSINESS_PATH}/media_assets_manager/src/vo/form_info_vo.cpp",
    "${MEDIALIB_BUSINESS_PATH}/media_assets_manager/src/vo/create_asset_vo.cpp",
    "${MEDIALIB_BUSINESS_PATH}/media_assets_manager/src/vo/clone_asset_vo.cpp",
    "${MEDIALIB_BUSINESS_PATH}/media_assets_manager/src/vo/convert_format_vo.cpp",
    "${MEDIALIB_BUSINESS_PATH}/media_assets_manager/src/vo/delete_photos_vo.cpp",
    "${MEDIALIB_BUSINESS_PATH}/media_assets_manager/src/vo/delete_photos_completed_vo.cpp",
    "${MEDIALIB_BUSINESS_PATH}/media_assets_manager/src/vo/asset_change_vo.cpp",
    "${MEDIALIB_BUSINESS_PATH}/media_assets_manager/src/vo/submit_cache_vo.cpp",
    "${MEDIALIB_BUSINESS_PATH}/media_assets_manager/src/vo/add_image_vo.cpp",
    "${MEDIALIB_BUSINESS_PATH}/media_assets_manager/src/vo/save_camera_photo_vo.cpp",
    "${MEDIALIB_BUSINESS_PATH}/media_assets_manager/src/vo/trash_photos_vo.cpp",
    "${MEDIALIB_BUSINESS_PATH}/media_assets_manager/src/vo/get_assets_vo.cpp",
    "${MEDIALIB_BUSINESS_PATH}/media_assets_manager/src/vo/get_index_construct_progress_vo.cpp",
    "${MEDIALIB_BUSINESS_PATH}/media_assets_manager/src/vo/revert_to_original_vo.cpp",
    "${MEDIALIB_BUSINESS_PATH}/media_assets_manager/src/vo/cloud_enhancement_vo.cpp",
    "${MEDIALIB_BUSINESS_PATH}/media_assets_manager/src/vo/modify_assets_vo.cpp",
    "${MEDIALIB_BUSINESS_PATH}/media_assets_manager/src/vo/retain_cloud_media_asset_vo.cpp",
    "${MEDIALIB_BUSINESS_PATH}/media_assets_manager/src/vo/start_download_cloud_media_vo.cpp",
    "${MEDIALIB_BUSINESS_PATH}/media_assets_manager/src/vo/grant_photo_uri_permission_vo.cpp",
    "${MEDIALIB_BUSINESS_PATH}/media_assets_manager/src/vo/grant_photo_uris_permission_vo.cpp",
    "${MEDIALIB_BUSINESS_PATH}/media_assets_manager/src/vo/cancel_photo_uri_permission_vo.cpp",
    "${MEDIALIB_BUSINESS_PATH}/media_assets_manager/src/vo/start_thumbnail_creation_task_vo.cpp",
    "${MEDIALIB_BUSINESS_PATH}/media_assets_manager/src/vo/stop_thumbnail_creation_task_vo.cpp",
    "${MEDIALIB_BUSINESS_PATH}/media_assets_manager/src/vo/get_asset_analysis_data_vo.cpp",
    "${MEDIALIB_BUSINESS_PATH}/media_assets_manager/src/vo/is_edited_vo.cpp",
    "${MEDIALIB_BUSINESS_PATH}/media_assets_manager/src/vo/request_edit_data_vo.cpp",
    "${MEDIALIB_BUSINESS_PATH}/media_assets_manager/src/vo/get_edit_data_vo.cpp",
    "${MEDIALIB_BUSINESS_PATH}/media_assets_manager/src/vo/start_asset_analysis_vo.cpp",
    "${MEDIALIB_BUSINESS_PATH}/media_assets_manager/src/vo/get_cloudmedia_asset_status_vo.cpp",
    "${MEDIALIB_BUSINESS_PATH}/media_assets_manager/src/vo/request_content_vo.cpp",
    "${MEDIALIB_BUSINESS_PATH}/media_assets_manager/src/vo/get_cloud_enhancement_pair_vo.cpp",
    "${MEDIALIB_BUSINESS_PATH}/media_assets_manager/src/vo/query_cloud_enhancement_task_state_vo.cpp",
    "${MEDIALIB_BUSINESS_PATH}/media_assets_manager/src/vo/query_photo_vo.cpp",
    "${MEDIALIB_BUSINESS_PATH}/media_assets_manager/src/vo/adapted_vo.cpp",
  ]

  media_album_service_vo_source = [
    "${MEDIALIB_BUSINESS_PATH}/media_albums_manager/src/vo/create_album_vo.cpp",
    "${MEDIALIB_BUSINESS_PATH}/media_albums_manager/src/vo/delete_albums_vo.cpp",
    "${MEDIALIB_BUSINESS_PATH}/media_albums_manager/src/vo/delete_highlight_albums_vo.cpp",
    "${MEDIALIB_BUSINESS_PATH}/media_albums_manager/src/vo/change_request_set_album_name_vo.cpp",
    "${MEDIALIB_BUSINESS_PATH}/media_albums_manager/src/vo/change_request_set_cover_uri_vo.cpp",
    "${MEDIALIB_BUSINESS_PATH}/media_albums_manager/src/vo/change_request_dismiss_vo.cpp",
    "${MEDIALIB_BUSINESS_PATH}/media_albums_manager/src/vo/change_request_set_display_level_vo.cpp",
    "${MEDIALIB_BUSINESS_PATH}/media_albums_manager/src/vo/change_request_set_is_me_vo.cpp",
    "${MEDIALIB_BUSINESS_PATH}/media_albums_manager/src/vo/set_highlight_user_action_data_vo.cpp",
    "${MEDIALIB_BUSINESS_PATH}/media_albums_manager/src/vo/set_subtitle_vo.cpp",
    "${MEDIALIB_BUSINESS_PATH}/media_albums_manager/src/vo/change_request_add_assets_vo.cpp",
    "${MEDIALIB_BUSINESS_PATH}/media_albums_manager/src/vo/change_request_remove_assets_vo.cpp",
    "${MEDIALIB_BUSINESS_PATH}/media_albums_manager/src/vo/change_request_move_assets_vo.cpp",
    "${MEDIALIB_BUSINESS_PATH}/media_albums_manager/src/vo/change_request_recover_assets_vo.cpp",
    "${MEDIALIB_BUSINESS_PATH}/media_albums_manager/src/vo/change_request_delete_assets_vo.cpp",
    "${MEDIALIB_BUSINESS_PATH}/media_albums_manager/src/vo/change_request_dismiss_assets_vo.cpp",
    "${MEDIALIB_BUSINESS_PATH}/media_albums_manager/src/vo/change_request_merge_album_vo.cpp",
    "${MEDIALIB_BUSINESS_PATH}/media_albums_manager/src/vo/change_request_place_before_vo.cpp",
    "${MEDIALIB_BUSINESS_PATH}/media_albums_manager/src/vo/change_request_set_order_position_vo.cpp",
    "${MEDIALIB_BUSINESS_PATH}/media_albums_manager/src/vo/album_commit_modify_vo.cpp",
    "${MEDIALIB_BUSINESS_PATH}/media_albums_manager/src/vo/album_add_assets_vo.cpp",
    "${MEDIALIB_BUSINESS_PATH}/media_albums_manager/src/vo/album_remove_assets_vo.cpp",
    "${MEDIALIB_BUSINESS_PATH}/media_albums_manager/src/vo/album_recover_assets_vo.cpp",
    "${MEDIALIB_BUSINESS_PATH}/media_albums_manager/src/vo/album_photo_query_vo.cpp",
    "${MEDIALIB_BUSINESS_PATH}/media_albums_manager/src/vo/album_get_assets_vo.cpp",
    "${MEDIALIB_BUSINESS_PATH}/media_albums_manager/src/vo/query_albums_vo.cpp",
    "${MEDIALIB_BUSINESS_PATH}/media_albums_manager/src/vo/get_albums_by_ids_vo.cpp",
    "${MEDIALIB_BUSINESS_PATH}/media_albums_manager/src/vo/get_order_position_vo.cpp",
    "${MEDIALIB_BUSINESS_PATH}/media_albums_manager/src/vo/get_face_id_vo.cpp",
    "${MEDIALIB_BUSINESS_PATH}/media_albums_manager/src/vo/get_analysis_process_vo.cpp",
    "${MEDIALIB_BUSINESS_PATH}/media_albums_manager/src/vo/get_highlight_album_info_vo.cpp",
    "${MEDIALIB_BUSINESS_PATH}/media_albums_manager/src/vo/get_photo_index_vo.cpp",
    "${MEDIALIB_BUSINESS_PATH}/media_albums_manager/src/vo/query_result_vo.cpp",
    "${MEDIALIB_BUSINESS_PATH}/media_albums_manager/src/vo/get_photo_album_object_vo.cpp",
    "${MEDIALIB_BUSINESS_PATH}/media_albums_manager/src/vo/set_photo_album_order_vo.cpp",
  ]

  sources += media_asset_service_vo_source
  sources += media_album_service_vo_source

  public_configs = [ ":taihe_config" ]

  deps = [ "${MEDIALIB_INNERKITS_PATH}/media_library_helper:media_library" ]

  use_exceptions = true

  external_deps = [
    "ability_runtime:ability_context_native",
    "ability_runtime:ability_manager",
    "ability_runtime:ability_runtime",
    "ability_runtime:abilitykit_native",
    "ability_runtime:ani_base_context",
    "ability_runtime:app_context",
    "ability_runtime:appkit_native",
    "ability_runtime:ui_extension",
    "access_token:libaccesstoken_sdk",
    "access_token:libprivacy_sdk",
    "access_token:libtokenid_sdk",
    "app_file_service:fileuri_native",
    "bundle_framework:appexecfwk_core",
    "c_utils:utils",
    "data_share:datashare_common",
    "data_share:datashare_consumer",
    "hilog:libhilog",
    "hitrace:hitrace_meter",
    "i18n:intl_util",
    "image_framework:image_ani",
    "image_framework:image_native",
    "image_framework:image_taihe",
    "image_framework:ohimage",
    "ipc:ipc_core",
    "ipc:ipc_single",
    "ipc:rpc",
    "libexif:libexif",
    "player_framework:media_client",
    "relational_store:native_rdb",
    "relational_store:rdb_data_share_adapter",
    "resource_management:librawfile",
    "runtime_core:ani",
    "runtime_core:libarkruntime",
    "runtime_core:ani_helpers",
    "samgr:samgr_proxy",
    "window_manager:libwm",
  ]

  public_external_deps = [ "e2fsprogs:libext2_uuid" ]

  defines = []
  defines += [ "MEDIALIBRARY_COMPATIBILITY=1" ]

  if (!media_library_link_opt) {
    sanitize = {
      cfi = true
      cfi_cross_dso = true
      debug = false
      integer_overflow = true
      ubsan = true
      boundary_sanitize = true
      stack_protector_ret = true
    }
  }

  if (ability_runtime_graphics) {
    external_deps += [ "ace_engine:ace_uicontent" ]
    cflags_cc = [ "-DHAS_ACE_ENGINE_PART" ]
  }

  subsystem_name = "multimedia"
  part_name = "media_library"
  output_extension = "so"
}

ohos_shared_library("photo_access_helper_ani") {
  shlib_type = "ani"
  configs = [ ":ani_config" ]

  sources = [ "src/cpp/ani_module_ohos_photoaccess_helper.cpp" ]

  deps = [
    ":medialibrary_ani_utils",
    "${MEDIALIB_INNERKITS_PATH}/media_library_helper:media_library",
  ]

  external_deps = [
    "ability_runtime:ability_context_native",
    "ability_runtime:ability_manager",
    "ability_runtime:ability_runtime",
    "ability_runtime:abilitykit_native",
    "ability_runtime:ani_base_context",
    "access_token:libaccesstoken_sdk",
    "data_share:datashare_consumer",
    "hilog:libhilog",
    "image_framework:image_ani",
    "image_framework:image_native",
    "image_framework:ohimage",
    "player_framework:media_client",
    "resource_management:librawfile",
    "runtime_core:ani",
    "runtime_core:libarkruntime",
  ]

  if (!media_library_link_opt) {
    sanitize = {
      cfi = true
      cfi_cross_dso = true
      debug = false
      integer_overflow = true
      ubsan = true
      boundary_sanitize = true
      stack_protector_ret = true
    }
  }

  subsystem_name = "multimedia"
  part_name = "media_library"
  output_extension = "so"
}

ohos_shared_library("userfile_manager_ani") {
  shlib_type = "ani"
  configs = [ ":ani_config" ]

  sources = [ "src/cpp/ani_module_ohos_userfile_manager.cpp" ]

  deps = [
    ":medialibrary_ani_utils",
    "${MEDIALIB_INNERKITS_PATH}/media_library_helper:media_library",
  ]

  external_deps = [
    "ability_runtime:ability_manager",
    "ability_runtime:abilitykit_native",
    "ability_runtime:ani_base_context",
    "data_share:datashare_consumer",
    "hilog:libhilog",
    "image_framework:image_ani",
    "image_framework:image_native",
    "image_framework:ohimage",
    "resource_management:librawfile",
    "runtime_core:ani",
    "runtime_core:libarkruntime",
  ]

  if (!media_library_link_opt) {
    sanitize = {
      cfi = true
      cfi_cross_dso = true
      debug = false
      integer_overflow = true
      ubsan = true
      boundary_sanitize = true
      stack_protector_ret = true
    }
  }

  subsystem_name = "multimedia"
  part_name = "media_library"
  output_extension = "so"
}

generate_static_abc("photo_access_helper") {
  base_url = "./ets"
  files = [ "./ets/@ohos.file.photoAccessHelper.ets" ]
  is_boot_abc = "True"
  device_dst_file = "/system/framework/photo_access_helper.abc"
}

ohos_prebuilt_etc("photo_access_helper_etc") {
  source = "$target_out_dir/photo_access_helper.abc"
  module_install_dir = "framework"
  subsystem_name = "multimedia"
  part_name = "media_library"
  deps = [ ":photo_access_helper" ]
}

generate_static_abc("userfile_manager") {
  base_url = "./ets"
  files = [ "./ets/@ohos.filemanagement.userFileManager.ets" ]
  is_boot_abc = "True"
  device_dst_file = "/system/framework/userfile_manager.abc"
}

ohos_prebuilt_etc("userfile_manager_etc") {
  source = "$target_out_dir/userfile_manager.abc"
  module_install_dir = "framework"
  subsystem_name = "multimedia"
  part_name = "media_library"
  deps = [ ":userfile_manager" ]
}
